# MasterThesisCode

./: .pre-commit-config.yaml  README.md  computeDifferenceAllFiles.py  computeDifferences.py  events.json  getting_started.py  main.py  plot_phases.py  plot_phases_annotated.py  pyproject.toml  pytest.ini  reformat_json.py  requirements.txt  templates.json
code/: main.py
code/existing_code/: getting_started.py  template_matching.py
code/plot_functions/: plot_phases.py  plot_phases_annotated.py
computeDifferences/: computeDifferences.py
helpFunctions/: reformatJson_Methods.py
plot_functions/: plot_phases.py  processing.py
src/: cost_function_approach.py  cost_function_approach_2.py  main.py  main_structure.py  position_helpers.py  reformat_json.py  sport_analysis.py  sport_analysis_overall.py  sport_analysis_sum.py  template_matching.py  template_start.py
src/MasterThesisCode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/compute_differences/: compute_difference_all_files.py  compute_differences.py  evaluation.py  evaluation_2.py  evaluation_old.py  evaluation_some.py  evaluation_some_old.py  sportanalysis.py
src/evaluation/: evaluation.py  process_events.py  sportanalysis.py
src/existing_code/: getting_started.py  rolling_mode.py  template_matching.py
src/helpFunctions/: reformatJson_Methods.py
src/help_functions/: cost_function.py  floodlight_code.py  pos_data_approach.py  position_helpers.py  reformatJson_methods.py
src/old_code/: cost_function_approach.py
src/plot_functions/: plot_phases.py  plot_phases_annotated.py  processing.py
(+31 files in other folders)
